--- a/QuickAcid.Examples/QuickAcid.Examples.csproj
+++ b/QuickAcid.Examples/QuickAcid.Examples.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -12,8 +12,6 @@
     <PackageReference Include="FsCheck" Version="3.1.0" />
     <PackageReference Include="FsCheck.Xunit" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="QuickMGenerate" Version="0.1.0" />
-    <PackageReference Include="QuickPulse" Version="0.1.1" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
@@ -23,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../QuickAcid/QuickAcid/QuickAcid.csproj" />
-    <ProjectReference Include="../../QuickAcid.Fluent/QuickAcid.Fluent/QuickAcid.Fluent.csproj" />
+    <PackageReference Include="QuickAcid" Version="0.0.1" />
   </ItemGroup>
+
 
 </Project>
