--- a/QuickAcid.Examples/QuickAcid.Examples.csproj
+++ b/QuickAcid.Examples/QuickAcid.Examples.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FsCheck" Version="3.1.0" />
     <PackageReference Include="FsCheck.Xunit" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <!-- <PackageReference Include="QuickPulse.Explains" Version="0.2.1" /> -->
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
@@ -21,8 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuickAcid" Version="0.0.1" />
+    <!-- <PackageReference Include="QuickAcid" Version="0.0.1" /> -->
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\QuickPulse.Explains\QuickPulse.Explains\QuickPulse.Explains.csproj" />
+    <ProjectReference Include="..\..\QuickAcid\QuickAcid\QuickAcid.csproj" />
+  </ItemGroup>
 
 </Project>
