--- a/QuickAcid.Examples/QuickAcid.Examples.csproj
+++ b/QuickAcid.Examples/QuickAcid.Examples.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="FsCheck" Version="3.1.0" />
     <PackageReference Include="FsCheck.Xunit" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
@@ -21,13 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuickAcid" Version="0.0.1" />
+    <!-- <PackageReference Include="QuickAcid" Version="0.0.1" /> -->
     <PackageReference Include="QuickPulse.Explains" Version="0.2.2" />
   </ItemGroup>
 
-  <!-- <ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\QuickAcid\QuickAcid\QuickAcid.csproj" />
-    <ProjectReference Include="..\..\QuickPulse.Explains\QuickPulse.Explains\QuickPulse.Explains.csproj" />
-  </ItemGroup> -->
+    <!-- <ProjectReference Include="..\..\QuickPulse.Explains\QuickPulse.Explains\QuickPulse.Explains.csproj" /> -->
+  </ItemGroup>
 
 </Project>
