--- a/QuickAcid.Examples/QuickAcid.Examples.csproj
+++ b/QuickAcid.Examples/QuickAcid.Examples.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="FsCheck" Version="3.1.0" />
-    <PackageReference Include="FsCheck.Xunit" Version="3.1.0" />
+    <!-- <PackageReference Include="FsCheck" Version="3.1.0" />
+    <PackageReference Include="FsCheck.Xunit" Version="3.1.0" /> -->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
